Update config file : adding possibility to use ~ syntax to make config file more generic

--- a/redminetimesync.config
+++ b/redminetimesync.config
@@ -1,4 +1,4 @@
 [DEFAULT]
-db: /home/alieno/.local/share/hamster-applet/hamster.db
-url: https://projects.devsum.it
+db: ~/.local/share/hamster-applet/hamster.db
+url: https://your.redmine.url
 key: <your_redmine_api_key_here>
