--- a/redminetimesync.config
+++ b/redminetimesync.config
@@ -1,4 +1,14 @@
-[DEFAULT]
-db: ~/.local/share/hamster-applet/hamster.db
+[redmine]
 url: https://your.redmine.url
 key: <your_redmine_api_key_here>
+
+
+[default]
+# Default Hamster local SQLite file
+db: ~/.local/share/hamster-applet/hamster.db
+
+# Regex used to parse Hamster time entry to find out issue ID
+issue_id_regexp: .*# ?(\d+)
+
+# Activity id sent to each time entry (uncomment this if you have not defined a default activity in Redmine and get an error)
+;redmine_default_activity_id: 9  # Development
